tests/lustre/typechecking/shouldPass/test_record2.lus
type rat = {n: real; d: real};

node x (r: rat) returns (ok: bool);
var y: rat;
var a: real;
let
  a = r.n * 2.1;
  y = ((r with .d = a) with .n = a / 2.1);
  ok = y.n = r.n;
  --%PROPERTY ok;
tel
