tests/lustre/typechecking/shouldFail/test_circular_eqns_flatten_nodes.lus
node b (x:int) returns (y: int)
var av: int;
var bv: int;
let
av = a(bv);
bv = a(av); -- this should fail
y = x;
tel

node a (x: int) returns (y: int)
let
y = x;
tel

